# SnPViewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LIMIT_LINES_GUIDE.md  PREFERENCES_DIALOG_UPDATE.md  README.md  pyproject.toml
.github/: python.instructions.md
src/snpviewer/backend/: __init__.py  conversions.py  project.py  smith.py
src/snpviewer/backend/models/: chart.py  dataset.py  export_job.py  marker.py  parameter_type.py  project.py  trace.py
src/snpviewer/backend/parsing/: touchstone.py
src/snpviewer/frontend/: app.py  constants.py  resources_rc.py
src/snpviewer/frontend/dialogs/: __init__.py  add_traces.py  common_dialogs.py  create_chart.py  linear_phase_error.py  peak_to_peak.py  phase_difference.py  preferences.py  preferences_old.py  trace_selection.py
src/snpviewer/frontend/plotting/: plot_pipelines.py
src/snpviewer/frontend/services/: loader.py
src/snpviewer/frontend/widgets/: __init__.py  chart_view.py  markers.py  panels.py  smith_view.py
tests/: test_conversions.py  test_plot_pipelines.py  test_threaded_loader.py  test_touchstone_parser.py
